# MacinMeter-DynamicRange-Tool

./: .clangd  .gitignore  AGENTS.md  API_REFERENCE.md  ARCHITECTURE_SUMMARY.md  CLAUDE.md  CODE_REVIEW_ORDER.md  Cargo.toml  Code_Quality_Tracking.md  DR_ALGORITHM_OPTIMIZATION_PLAN.md  DR_Algorithm_Comparison_Report.md  DR_Batch_Memory_Optimization_Plan.md  DR_CALCULATOR_OPTIMIZATION_PLAN.md  FLAMEGRAPH_ANALYSIS.md  FUTURE_OPTIMIZATION_ROADMAP.md  LICENSE  MEMORY_DIAGNOSIS_MACOS_VS_WINDOWS.md  PARALLEL_DECODER_OPTIMIZATION_PLAN.md  PERFORMANCE_OPTIMIZATION_PLAN.md  Performance_Tracking.md  README.md  README.simplified.md  README_CN.md  RELEASE_NOTES.md  SILENCE_FILTERING_PLAN.md  TEST_AUDIT_PLAN.md  TEXT_CLEANUP_PLAN.md  THIRD_PARTY_NOTICES.md  Test_Coverage_Tracking.md  benchmark.sh  benchmark_10x.sh  benchmark_analysis.py  benchmark_comprehensive.sh  benchmark_multichannel_10x.sh  benchmark_parallel.sh  generate_samples.sh  master_test.txt  optimization_log.md  package-lock.json  test_error_tolerance.sh  (+4 more)
.cargo/: config.toml
.claude/: package.json
.claude/hooks/: diagnostics_parser.js  prompt.md  vscode-diagnostics.json
.github/workflows/: README.md  ci-cd.yml
SDK-2025-03-07/: foo_abx-mac.fb2k-component
changelogs/: CHANGELOG_v0.1.1_2025-11-08-14-20.md
docs/: BENCHMARKS.md  BENCHMARKS_CN.md  DR_Algorithm_Analysis_2025-09-09-00-10-07.md  LEGAL.md  LEGAL_CN.md  SUPPORTED_FORMATS.md  SUPPORTED_FORMATS_CN.md  channel_doc.md  tauri_wrapper.md
docs/Measuring-DR-ENv3_2025-08-30-19_10_53/: Measuring_DR_ENv3.md
foobar2000_plugin/: .clang-format  .clangd  BUILD.md  CMakeLists.txt  Info.plist.template  build_plugin.sh  compile_commands.json
foobar2000_plugin/backup/stable_cpp_async_20250921_184158/: BACKUP_INFO.md  CMakeLists.txt
foobar2000_plugin/backup/stable_cpp_async_20250921_184158/rust_core/: Cargo.toml
foobar2000_plugin/backup/stable_cpp_async_20250921_184158/rust_core/src/: lib.rs
foobar2000_plugin/backup/stable_cpp_async_20250921_184158/src/bridge/: rust_bridge.cpp  rust_bridge.h
foobar2000_plugin/backup/stable_cpp_async_20250921_184158/src/core/: dr_analysis_controller.cpp  dr_analysis_controller.h
foobar2000_plugin/backup/stable_cpp_async_20250921_184158/src/ui/: context_menu.cpp  context_menu.h  progress_dialog.cpp  progress_dialog.h
foobar2000_plugin/backup_progress_fixed/: CMakeLists.txt
foobar2000_plugin/backup_progress_fixed/audio/: audio_accessor.cpp  audio_accessor.h
foobar2000_plugin/backup_progress_fixed/bridge/: rust_bridge.h
foobar2000_plugin/backup_progress_fixed/core/: dr_analysis_controller.cpp  dr_analysis_controller.h  foobar2000_stub.cpp  plugin_main.cpp
foobar2000_plugin/backup_progress_fixed/ui/: context_menu.cpp  progress_worker.cpp  progress_worker.h  results_dialog.cpp  results_dialog.h
foobar2000_plugin/rust_core/: Cargo.toml
foobar2000_plugin/rust_core/src/: lib.rs
foobar2000_plugin/src/: audio_accessor.cpp  audio_accessor.h  context_menu.cpp  foobar2000_stub.cpp  plugin_main.cpp  results_dialog.cpp  results_dialog.h  rust_bridge.cpp  rust_bridge.h
foobar2000_plugin/src/audio/: audio_accessor.cpp  audio_accessor.h
foobar2000_plugin/src/bridge/: rust_bridge.cpp  rust_bridge.h
foobar2000_plugin/src/core/: foobar2000_stub.cpp  plugin_main.cpp
foobar2000_plugin/src/ui/: context_menu.cpp  progress_worker.cpp  progress_worker.h
logs/: README.md  experiment_1_sum_doubling_enabled.txt  experiment_3_weighted_rms_enabled.txt  experiment_4_all_features_enabled.txt  experiment_baseline_early-version.txt  experiment_log.txt
scripts/: README.md  benchmark-10x.ps1  benchmark-serial.ps1  benchmark.ps1  benchmark.sh  benchmark_10x.sh  benchmark_dsd_10x.sh  create-macos-bundle.sh  cross-arch-test.sh  debug-wrapper.sh  debug-x86-simd.sh  install-pre-commit.sh  pre-commit  quality-check.sh
src/: error.rs  lib.rs  main.rs
src/audio/: channel_layout.rs  error_handling.rs  ffmpeg_bridge.rs  format.rs  mod.rs  multi_decoder.rs  opus_decoder.rs  parallel_decoder.rs  pcm_engine.rs  stats.rs  streaming.rs  universal_decoder.rs  wav_decoder.rs
src/core/: channel_data.rs  dr_calculator.rs  histogram.rs  mod.rs  peak_selection.rs
src/processing/: batch.rs  channel_data.rs  channel_extractor.rs  channel_separator.rs  dr_channel_state.rs  edge_trimmer.rs  mod.rs  performance_metrics.rs  processing_coordinator.rs  sample_conversion.rs  simd.rs  simd_channel_data.rs  simd_core.rs
src/tools/: batch_state.rs  cli.rs  constants.rs  formatter.rs  mod.rs  parallel_processor.rs  processor.rs  scanner.rs  utils.rs
src/utils/: dynamic_memory.rs  memory_analysis.rs  memory_strategy.rs  mod.rs  safety.rs
tauri-app/: README.md  index.html  package-lock.json  package.json
tauri-app/scripts/: sync-version.cjs
tauri-app/src/: main.ts  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
tauri-app/src/i18n/: index.ts
tauri-app/src/i18n/locales/: en-US.json  zh-CN.json
tests/: README.md  aiff_diagnostic.rs  audio_format_tests.rs  audio_test_fixtures.rs  boundary_tests.rs  chunk_stats_tests.rs  error_handling_tests.rs  error_path_tests.rs  memory_safety_tests.rs  opus_decoder_tests.rs  parallel_decoder_tests.rs  parallel_diagnostic_tests.rs  simd_edge_case_tests.rs  simd_performance_tests.rs  simd_precision_test.rs  simd_unit_tests.rs  tools_integration_tests.rs  universal_decoder_tests.rs
