[package]
name = "macinmeter-dr-tool"
version = "0.1.0"
edition = "2024"
description = "动态范围(DR)音频分析工具"

[[bin]]
name = "MacinMeter-DynamicRange-Tool"
path = "src/main.rs"

[dependencies]
# 音频文件解码
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }

# 工具库
walkdir = "2.5"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# 性能优化（可选）
rayon = "1.10"

[profile.release]
opt-level = 3
lto = "fat"           # 更激进的LTO优化
codegen-units = 1
panic = "abort"
strip = true          # 去除调试符号，减小二进制大小
overflow-checks = false   # 在release模式禁用溢出检查（提升性能）
