[package]
name = "macinmeter-dr-tool"
version = "0.1.0"
edition = "2024"
description = "foobar2000 DR Meter 逆向兼容工具 - 100%精度匹配foo_dr_meter插件"

[[bin]]
name = "MacinMeter-DynamicRange-Tool-foo_dr"
path = "src/main.rs"

[dependencies]
# 音频文件解码
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }

# 工具库
walkdir = "2.5"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# 性能优化（可选）
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
