[package]
name = "macinmeter-dr-tool"
version = "0.1.0"
edition = "2024"
description = "基于foobar2000 DR Meter官方规范的高精度音频动态范围分析工具 - 致敬Janne Hyvärinen"

[[bin]]
name = "MacinMeter-DynamicRange-Tool-foo_dr"
path = "src/main.rs"

[dependencies]
# 音频文件解码
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }

# 工具库
walkdir = "2.5"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# 性能优化（可选）
rayon = "1.10"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 系统信息监控
sysinfo = "0.30"

# 全局静态变量支持
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
